# release-tests

./: .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  OWNERS  README.md  catalog-info.yaml  cli  collect_prow_result_stream.py  jobs  prow-jobs.csv  prow_job.py  pyproject.toml  results  setup.py
.claude/commands/: approve.md  lgtm.md
.github/workflows/: main.yml
_releases/: .auto-OCP-4.11.txt  Auto-OCP-4.11.txt  Auto-OCP-4.13.txt  Auto-OCP-4.14.txt  Auto-OCP-4.15.txt  Auto-OCP-4.16.txt  latest_4.16_nightly.json  ocp-4.12-test-jobs-amd64.json  ocp-4.13-test-jobs-amd64.json  ocp-4.14-test-jobs-amd64.json  ocp-4.15-test-jobs-amd64.json  ocp-4.15-test-jobs-multi.json  ocp-4.16-nightly-test-jobs.json  ocp-4.16-test-jobs-amd64.json  ocp-4.16-test-jobs-arm64.json  ocp-4.16-test-jobs.json  ocp-4.17-test-jobs-amd64.json  ocp-4.18-test-jobs-amd64.json  ocp-4.19-test-jobs-amd64.json  ocp-4.20-test-jobs-amd64.json  ocp-4.21-test-jobs-amd64.json  ocp-4.22-test-jobs-amd64.json  ocp-4.23-test-jobs-amd64.json  ocp-4.x-test-jobs-amd64.json  ocp-5.0-test-jobs-amd64.json  ocp-latest-4.12-nightly-amd64.json  ocp-latest-4.12-nightly-arm64.json  ocp-latest-4.12-stable-amd64.json  ocp-latest-4.12-stable-arm64.json  ocp-latest-4.13-nightly-amd64.json  ocp-latest-4.13-stable-amd64.json  ocp-latest-4.14-nightly-amd64.json  ocp-latest-4.14-nightly.json  ocp-latest-4.14-stable-amd64.json  ocp-latest-4.14-stable.json  ocp-latest-4.15-nightly-amd64.json  ocp-latest-4.15-nightly.json  ocp-latest-4.15-stable-amd64.json  ocp-latest-4.15-stable.json  ocp-latest-4.16-nightly-amd64.json  (+5400 more)
_releases/.github-app-test/: write-smoke.txt
_releases/4.12/: 4.12.z.yaml
_releases/4.13/: 4.13.z.yaml
_releases/4.14/: 4.14.z.yaml
_releases/4.15/: 4.15.z.yaml
_releases/4.16/: 4.16.z.yaml
_releases/4.17/: 4.17.z.yaml
_releases/4.18/: 4.18.z.yaml
_releases/4.19/: 4.19.z.yaml
_releases/4.20/: 4.20.z.yaml
_releases/4.21/: 4.21.z.yaml
_releases/4.22/: 4.22.z.yaml
_releases/5.0/: 5.0.z.yaml
_z-stream/: 4.15.6.txt
deployment/: MCP_SERVER_DEPLOYMENT.md  RELEASE_PROGRESS_DASHBOARD_DEPLOYMENT.md  SLACK_BOT_DEPLOYMENT.md
deployment/component-monitor/: build.sh  config.yaml
deployment/systemd/: oar-bot.service  release-progress-dashboard.service  release-tests-mcp.service  ship-status-component-monitor.service
docs/: ASYNC_APPROVAL_IMPLEMENTATION.md  IMAGE_CONSISTENCY_CHECK.md  JIRA_NOTIFICATOR.md  KONFLUX_RELEASE_FLOW.md  RELEASE_PROGRESS_DASHBOARD.md
mcp_server/: README.md  __init__.py  check_env.sh  requirements.txt  run_server.sh  server.py  server_dev.py
oar/: README.md  __init__.py  _version.py
oar/cli/: __main__.py  cmd_add_qe_approval.py  cmd_change_advisory_status.py  cmd_check_blocking_sec_alerts.py  cmd_check_cve_tracker_bug.py  cmd_check_greenwave_cvp_tests.py  cmd_controller_group.py  cmd_create_test_report.py  cmd_drop_bugs.py  cmd_group.py  cmd_image_consistency_check.py  cmd_image_signed_check.py  cmd_push_to_cdn.py  cmd_stage_testing.py  cmd_take_ownership.py  cmd_update_bug_list.py
oar/controller/: detector.py
oar/core/: advisory.py  advisory_mgr.py  config_store.json  config_store.py  configstore.json  configstore.py  const.py  cyborg.py  git.py  (+17 more)
prow/: Dockerfile  Dockerfile.k8sgpt  README.md  setup.py
scripts/: discover-active-releases.py
tests/: test_advisory.py  test_advisory_grade.py  test_advisory_mgr.py  test_artifacts.py  test_call_stage_job.py  test_config_store.py  test_configstore.py  test_configstore_cache.py  test_git.py  test_icc_checker.py  test_icc_image.py  test_icc_payload.py  test_icc_shipment.py  test_jenkins.py  test_jira.py  test_jira_mgr.py  test_jira_notificator.py  test_job.py  test_kernel_tag.py  test_ldap.py  test_log_capture.py  test_mcp_server.py  test_mcp_server_internals.py  test_notification.py  test_notification_mgr.py  test_operators.py  test_release_discovery.py  test_selector.py  test_send_email_mgr.py  test_shipment.py  test_sippy.py  test_slack_message_receiver.py  test_statebox.py  test_update_bug_list.py  test_util.py  test_worksheet.py  test_worksheet_mgr.py
tools/: __init__.py  auto_release_test_dashboard.py  auto_release_test_result_checker.py  check_stage_bundle_images.sh  ci_job_failure_fetcher.py  collect_prow_case_result.py  collect_prow_result_stream.py  jira_notificator.py  job.py  mcp_data_collector.py  payloads.py  prow_spider.py  query-api-jobs.py  slack_message_receiver.py
(+191 files in other folders)
