[build-system]
requires = [
    "setuptools>=65.5.1",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["oar"]

[tool.setuptools_scm]
write_to = "oar/_version.py"

[project]
dynamic = ["version"]
name="oar"
authors = [
    {name = "AOS QE Team", email = "aos-qe@redhat.com"},
]
description = "CLI tool for managing and automating QE z-stream release tasks"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["openshift", "errata", "advisory"]
license.file = "LICENSE"
dependencies = [
    "gspread",
    "gspread-formatting",
    "click >= 8.1.3",
    "errata-tool >= 1.29.0",
    "pyyaml",
    "requests",
    "requests-gssapi ~= 1.2.3",
    "jira >= 3.4.1",
]

[project.scripts]
oar = "oar.cli.__main__:main"

[project.urls]
homepage = "https://github.com/openshift/release-tests"
repository = "https://github.com/openshift/release-tests.git"