[build-system]
requires = [
    "setuptools>=65.5.1",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["oar"]

[tool.setuptools_scm]
write_to = "oar/_version.py"

[project]
dynamic = ["version"]
name = "oar"
authors = [
    {name="AOS QE TRT Team", email="aos-qe@redhat.com"}
]
description = "CLI tool for automating QE z-stream release tasks"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["openshift", "oar"]
license.file = "LICENSE"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
    "gspread",
    "gspread-formatting",
    "click >= 8.1.3",
    "errata-tool >= 1.29.0",
    "pyyaml",
    "requests ~= 2.27.1",
    "slack_sdk",
    "requests-gssapi ~= 1.2.3",
    "jira >= 3.4.1",
    "python-jenkins",
    "beautifulsoup4",
    "pip-system-certs",
    "artcommon@git+https://github.com/openshift-eng/art-tools.git@main#subdirectory=artcommon",
    "rh-elliott@git+https://github.com/openshift-eng/art-tools.git@main#subdirectory=elliott",
    "lxml"
]

[project.scripts]
oar = "oar.cli.__main__:main"

[project.urls]
homepage = "https://github.com/openshift/release-tests"
repository = "https://github.com/openshift/release-tests.git"
