[build-system]
requires = [
    "setuptools>=68.0.0",
    "setuptools_scm[toml]>=8.0.0",
    "wheel>=0.40.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["oar"]

[tool.setuptools_scm]
write_to = "oar/_version.py"

[project]
version = "2.0.0"
name = "oar"
authors = [
    {name="Errata Reliability Team", email="ert@redhat.com"}
]
description = "CLI tool for automating QE z-stream release tasks"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["openshift", "oar"]
license.file = "LICENSE"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed"
]
dependencies = [
    # Core dependencies
    "click >= 8.1.3",
    "pyyaml >= 6.0",
    "requests >= 2.31.0",
    "cryptography >= 41.0.0",
    
    # External service integrations
    "gspread == 5.10.0",
    "gspread-formatting >= 1.2.1",
    "errata-tool >= 1.29.0",
    "slack_sdk >= 3.21.3",
    "requests-gssapi ~= 1.2.3",
    "jira >= 3.4.1",
    "python-jenkins >= 1.8.0",
    "python-gitlab >= 3.15.0",
    "ldap3 >= 2.9.1",
    
    # Security
    "pip-system-certs >= 4.0.0",
    "python-jose >= 3.3.0",
    
    # ART tools (unified monorepo package)
    "rh-art-tools@git+https://github.com/openshift-eng/art-tools.git@main",
    
    # AI/ML
    "langchain-community >= 0.0.1",
    "openai >= 0.27.0",
    
    # Utilities
    "glom >= 23.1.1",
    "GitPython >= 3.1.40",
    "schedule >= 1.2.0"
]

[project.scripts]
oar = "oar.cli.__main__:main"
oarctl = "oar.cli.cmd_controller_group:cli"

[project.urls]
homepage = "https://github.com/openshift/release-tests"
repository = "https://github.com/openshift/release-tests.git"
